fixed some css alignment problems in the dashboardspost

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,11 +80,10 @@ main {
     width: 88%;
 }
 .Dashboard-containerOne {
-    text-align: center;
-    padding-right: 195px;
+   
 }
 .Dashboard-containerTwo {
-    text-align: center;
+    
 }
   
   
